# rocket_diesel

./: Cargo.toml  README.md  _Rocket.toml
migrations/2018-10-24-165021_entries/: up.sql
rsrv/: .env  Dockerfile  build_image.sh
src/: lib.rs  models.rs  schema.rs
